--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "lucide-react": "^0.554.0",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
